# SIMBL-LegacyFullScreen

./: .gitignore  CMakeLists.txt  Info.plist  LegacyFullScreen.h  LegacyFullScreen.m  README.md
English.lproj/: InfoPlist.strings
LegacyFullScreen.xcodeproj/: project.pbxproj
LegacyFullScreen.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ZKSwizzle/: ZKSwizzle.m
qtcreator/: LegacyFullScreen.pro  call_xcodebuild.sh
